Issue 36523: CSS fixed height of 20px; for ".labkey-iconpanel .thumb-wrap-side" breaks some PRC Menus

--- a/internal/webapp/extWidgets/IconPanel.css
+++ b/internal/webapp/extWidgets/IconPanel.css
@@ -20,7 +20,6 @@
     width: 100%;
     float: left;
     display: block;
-    height: 20px;
     margin-bottom: 0;
 }
 .labkey-iconpanel .thumb-wrap-side .fa{
